[project]
name = "flexcache"
description = "Saves and loads to the cache a transformed versions of a source object."
dynamic = ["version"]
authors = [{ name = "Hernan E. Grecco", email = "hernan.grecco@gmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "BSD" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Topic :: System :: Filesystems",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
keywords = ["cache", "optimization", "storage", "disk"]


[project.urls]
Homepage = "https://github.com/hgrecco/flexcache"
Issues = "https://github.com/hgrecco/flexcache/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = true }]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = "."

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.tasks]
test = "pytest"

[tool.pixi.dependencies]
python = "*"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
test-py312 = { features = ["test", "py312"], solve-group = "default" }

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.feature.py312.dependencies]
python = "==3.12.9"
